[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = [
    "E501",
]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "Q",    # flake8-quotes
]

[tool.ruff.per-file-ignores]
# Ignore unused imports in __init__ files
"__init__.py" = ["F401"]
