[metadata]
description = Weasel: A small and easy workflow system
url = https://github.com/explosion/weasel/
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/explosion/weasel/releases
    Source = https://github.com/explosion/weasel/

[options]
python_requires = >=3.6
install_requires =
    wasabi>=0.9.1,<1.1.0
    pathy>=0.3.5
    typer>=0.3.0,<0.5.0
    requests>=2.13.0,<3.0.0
    tqdm>=4.38.0,<5.0.0
    pydantic>=1.7.4,!=1.8,!=1.8.1,<1.11.0
    srsly>=2.4.4,<3.0.0
    confection>=0.0.3,<0.1.0

[flake8]
ignore = E203, E266, E501, E731, W503, E741, F541
max-line-length = 80
select = B,C,E,F,W,T4,B9
exclude =
    .env,
    .git,
    __pycache__,
    _tokenizer_exceptions_list.py,

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy
allow_redefinition = True
