[metadata]
description = Weasel: A small and easy workflow system
url = https://github.com/explosion/weasel/
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/explosion/weasel/releases
    Source = https://github.com/explosion/weasel/

[options.entry_points]
console_scripts =
    weasel = weasel._util:app
    # TODO: Using 'spacy' as an alias has consequences,
    # and may not be the best approache
    spacy = weasel._util:app
