[metadata]
name = weasel
version = 0.1.0
description = Weasel: A small and easy workflow system
url = https://github.com/explosion/weasel/
author = Explosion
author_email = contact@explosion.ai
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
project_urls =
    Release notes = https://github.com/explosion/weasel/releases
    Source = https://github.com/explosion/weasel/

[options]
install_requires =
    confection>=0.0.4,<0.1.0
    packaging>=20.0
    wasabi>=0.9.1,<1.2.0
    srsly>=2.4.3,<3.0.0
    catalogue>=2.0.6,<2.1.0
    typer>=0.3.0,<0.8.0
    pathy>=0.10.0
    requests>=2.13.0,<3.0.0
    pydantic>=1.7.4,!=1.8,!=1.8.1,<1.11.0


[options.entry_points]
console_scripts =
    weasel = weasel._util:app

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
plugins = pydantic.mypy
allow_redefinition = True
